--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="jumbotron">
-              <h1>München</h1>
+              <h1>München City</h1>
               <p>Today (Nov 13)</p>
               <img src="1479205903.png" class="img-responsive">
               <p>12°C rain feels like 2°C</p>
