--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="section">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="jumbotron">
               <h1>München City</h1>
               <p>Today (Nov 13)</p>
@@ -17,7 +17,7 @@
               <p>12°C rain feels like 2°C</p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <ul class="nav nav-pills">
               <li class="active">
                 <a href="www.google.de">Share</a>
@@ -30,9 +30,9 @@
               </li>
             </ul>
             <p>Share:
-              <br>-<a id="link" href="" target="_blank" name="link">Link</a>
-            
-                  <br>-Whatsapp
+              <br>-
+              <a id="link" href="" target="_blank" name="link">Link</a>
+              <br>-Whatsapp
               <br>-Facebook
               <br>-Twitter
               <br>-Email</p>
@@ -64,10 +64,62 @@
             <div id="linktext" style="font-size:5px"></div>
             <p></p>
           </div>
-          
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div id="content">
+              <ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
+                <li class="active">
+                  <a href="#red" data-toggle="tab">Red</a>
+                </li>
+                <li>
+                  <a href="#orange" data-toggle="tab">Orange</a>
+                </li>
+                <li>
+                  <a href="#yellow" data-toggle="tab">Yellow</a>
+                </li>
+                <li>
+                  <a href="#green" data-toggle="tab">Green</a>
+                </li>
+                <li>
+                  <a href="#blue" data-toggle="tab">Blue</a>
+                </li>
+              </ul>
+              <div id="my-tab-content" class="tab-content">
+                <div class="tab-pane active" id="red">
+                  <h1>Red</h1>
+                  <p>red red red red red red</p>
+                </div>
+                <div class="tab-pane" id="orange">
+                  <h1>Orange</h1>
+                  <p>orange orange orange orange orange</p>
+                </div>
+                <div class="tab-pane" id="yellow">
+                  <h1>Yellow</h1>
+                  <p>yellow yellow yellow yellow yellow</p>
+                </div>
+                <div class="tab-pane" id="green">
+                  <h1>Green</h1>
+                  <p>green green green green green</p>
+                </div>
+                <div class="tab-pane" id="blue">
+                  <h1>Blue</h1>
+                  <p>blue blue blue blue blue</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   
-
+<script type="text/javascript">
+    jQuery(document).ready(function ($) {
+        $('#tabs').tab();
+    });
+</script>  
 </body></html>
