--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="section">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="jumbotron">
               <h1>München City</h1>
               <p>Today (Nov 13)</p>
@@ -17,18 +17,41 @@
               <p>12°C rain feels like 2°C</p>
             </div>
           </div>
-          <div class="col-md-6">
-            <ul class="nav nav-pills">
-              <li class="active">
-                <a href="www.google.de">Share</a>
-              </li>
-              <li>
-                <a href="#">Make</a>
-              </li>
-              <li>
-                <a href="#">About</a>
-              </li>
-            </ul>
+          <div class="col-md-4">
+            <div id="content">
+              <ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
+                <li class="active">
+                  <a href="#share" data-toggle="tab">Share</a>
+                </li>
+                <li>
+                  <a href="#orange" data-toggle="tab">Make</a>
+                </li>
+                <li>
+                  <a href="#yellow" data-toggle="tab">About</a>
+                </li>
+    
+              </ul>
+              <div id="my-tab-content" class="tab-content">
+                <div class="tab-pane active" id="share">
+                  <br>
+                  <a><i class="fa fa-5x fa-fw fa-share-alt-square"></i></a>
+                  <a><i class="fa fa-5x fa-fw fa-facebook-square"></i></a>
+                  <a><i class="fa fa-5x fa-fw fa-envelope-square"></i></a>
+                  <a><i class="fa fa-5x fa-fw fa-whatsapp"></i></a>
+                  
+                </div>
+                <div class="tab-pane" id="orange">
+                  <h1>Orange</h1>
+                  <p>orange orange orange orange orange</p>
+                </div>
+                <div class="tab-pane" id="yellow">
+                  <h1>Yellow</h1>
+                  <p>yellow yellow yellow yellow yellow</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
             <p>Share:
               <br>-
               <a id="link" href="" target="_blank" name="link">Link</a>
@@ -69,57 +92,29 @@
     </div>
     <div class="section">
       <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div id="content">
-              <ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
-                <li class="active">
-                  <a href="#red" data-toggle="tab">Red</a>
-                </li>
-                <li>
-                  <a href="#orange" data-toggle="tab">Orange</a>
-                </li>
-                <li>
-                  <a href="#yellow" data-toggle="tab">Yellow</a>
-                </li>
-                <li>
-                  <a href="#green" data-toggle="tab">Green</a>
-                </li>
-                <li>
-                  <a href="#blue" data-toggle="tab">Blue</a>
-                </li>
-              </ul>
-              <div id="my-tab-content" class="tab-content">
-                <div class="tab-pane active" id="red">
-                  <h1>Red</h1>
-                  <p>red red red red red red</p>
-                </div>
-                <div class="tab-pane" id="orange">
-                  <h1>Orange</h1>
-                  <p>orange orange orange orange orange</p>
-                </div>
-                <div class="tab-pane" id="yellow">
-                  <h1>Yellow</h1>
-                  <p>yellow yellow yellow yellow yellow</p>
-                </div>
-                <div class="tab-pane" id="green">
-                  <h1>Green</h1>
-                  <p>green green green green green</p>
-                </div>
-                <div class="tab-pane" id="blue">
-                  <h1>Blue</h1>
-                  <p>blue blue blue blue blue</p>
-                </div>
-              </div>
-            </div>
+        <div class="row text-center">
+          <div class="col-xs-3 text-center">
+            <a><i class="fa fa-5x fa-fw fa-instagram"></i></a>
+          </div>
+          <div class="col-xs-3">
+            <a><i class="fa fa-5x fa-fw fa-facebook"></i></a>
+          </div>
+          <div class="col-xs-3 text-center">
+            <a><i class="fa fa-5x fa-fw fa-github"></i></a>
           </div>
         </div>
       </div>
     </div>
+    <div class="section">
+      <div class="container">
+        <div class="row"></div>
+      </div>
+    </div>
+    <script type="text/javascript">
+      jQuery(document).ready(function ($) {
+          $('#tabs').tab();
+      });
+    </script>
   
-<script type="text/javascript">
-    jQuery(document).ready(function ($) {
-        $('#tabs').tab();
-    });
-</script>  
+
 </body></html>
