--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             </div>
           </div>
           <div class="col-md-6">
-           <br> <ul class="nav nav-tabs">
+            <br>
+            <ul class="nav nav-tabs" style="font-size:13px">
               <li class="active">
                 <a data-toggle="pill" href="#share">Share</a>
               </li>
@@ -33,10 +34,10 @@
               <div id="share" class="tab-pane fade in active">
                 <p>
                   <br>
-                  <a><i class="fa fa-5x fa-fw fa-share-alt-square"></i></a>
-                  <a><i class="fa fa-5x fa-fw fa-facebook-square"></i></a>
-                  <a><i class="fa fa-5x fa-fw fa-envelope-square"></i></a>
-                  <a><i class="fa fa-5x fa-fw fa-whatsapp"></i></a>
+                  <a><i class="fa fa-4x fa-fw fa-share-alt-square"></i></a>
+                  <a><i class="fa fa-4x fa-fw fa-facebook-square"></i></a>
+                  <a><i class="fa fa-4x fa-fw fa-envelope-square"></i></a>
+                  <a><i class="fa fa-4x fa-fw fa-whatsapp"></i></a>
                 </p>
               </div>
               <div id="make" class="tab-pane fade">
