--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
           <div class="col-md-6">
             <br>
             <ul class="nav nav-tabs" style="font-size:13px">
-              <li>
+              <li class="active">
                 <a data-toggle="pill" href="#share">Share</a>
               </li>
-              <li class="active">
+              <li>
                 <a data-toggle="pill" href="#make">Make Weather Great Again</a>
               </li>
               <li>
@@ -74,28 +74,25 @@
               </li>
             </ul>
             <div class="tab-content">
-              <div id="share" class="tab-pane fade  in active">
+              <div id="share" class="tab-pane fade ">
                 <p>
                   <br>
                   <a><i class="fa fa-4x fa-fw fa-share-alt-square"></i></a>
                   <a><i class="fa fa-4x fa-fw fa-facebook-square"></i></a>
                   <a><i class="fa fa-4x fa-fw fa-envelope-square"></i></a>
                   <a id="whatsapp" href="none"><i class="fa fa-4x fa-fw fa-whatsapp"></i></a>
-                  
-
-<script type="text/javascript">
-//<![CDATA[
-var text="whatsapp://send?text=" + document.URL;
-    //var text="mailto:?subject=Weather&amp;body=http%3A%2F%2Fmgwa.jimdo.com%2Fweather%2F";
-    //var x = document.getElementsByClassName("cc-sharebuttons-mail");
-    //x[0].href=text;
-    document.getElementById("whatsapp").href=text;
-//]]>
-</script>
-                
+                  <script type="text/javascript">
+                    //<![CDATA[
+                    var text="whatsapp://send?text=" + document.URL;
+                        //var text="mailto:?subject=Weather&amp;body=http%3A%2F%2Fmgwa.jimdo.com%2Fweather%2F";
+                        //var x = document.getElementsByClassName("cc-sharebuttons-mail");
+                        //x[0].href=text;
+                        document.getElementById("whatsapp").href=text;
+                    //]]>
+                  </script>
                 </p>
               </div>
-              <div id="make" class="tab-pane fade">
+              <div id="make" class="tab-pane fade in active">
                 <p>
                   <br>Want to go for BBQ, skiing, swimming?
                   <br>Motivate your friends with great weather!
