--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               </li>
             </ul>
             <div class="tab-content">
-              <div id="share" class="tab-pane fade ">
+              <div id="share" class="tab-pane fade in active">
                 <p>
                   <br>
                   <a><i class="fa fa-4x fa-fw fa-share-alt-square"></i></a>
@@ -92,7 +92,7 @@
                   </script>
                 </p>
               </div>
-              <div id="make" class="tab-pane fade in active">
+              <div id="make" class="tab-pane fade">
                 <p>
                   <br>Want to go for BBQ, skiing, swimming?
                   <br>Motivate your friends with great weather!
