--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <div class="row">
           <div class="col-md-7">
             <div class="jumbotron">
-              <p id="weather_in">München City</p>
-              <p id="date">Today, Nov 13</p>
+              <p id="weather_in" style="font-size:25px">München City</p>
+              <!--<p id="date">Today, Nov 13</p>-->
               <div id="p0" class="hidden">
                 <img src="weather/01.png" class="img-responsive">Make your own weather.</div>
-              <div class="row" id="p1">
+              <div id="p1" class="row">
                 <div class="col-xs-7">
                   <div>
                     <img src="weather/01.png" class="img-responsive">
@@ -43,10 +43,41 @@
                 </div>
                 <div class="col-xs-5">
                   <div>
-                    <p id="date">Today, Nov 13</p>
-                    <p>
+                    <p id="date" style="font-size:14px">Today, Nov 13</p>
+                    <p style="font-size:14px">
                       <span style="font-size:50px">32</span>°C
                       <br>sun, feels like 34°C, enjoy it</p>
+                  </div>
+                </div>
+              </div><hr>
+              <div class="row" id="p1">
+                <div class="col-xs-6">
+                  <p>Tomorrow</p>
+                </div>
+                <div class="col-xs-6">
+                  <p>Trend</p>
+                </div>
+              </div>
+              <div class="row" id="p1">
+                <div class="col-xs-3">
+                  <div>
+                    <img src="weather/01.png" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div>
+                    <p style="font-size:14px">31°C
+                      <br>sun</p>
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div>
+                    <img src="weather/02.png" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div>
+                    <p style="font-size:14px">no significant changes</p>
                   </div>
                 </div>
               </div>
