--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript">
       // global variable
       var old_weather_code="NA";
@@ -79,8 +79,8 @@
         ga('create', 'UA-87680784-1', 'auto');
         ga('send', 'pageview');
     </script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
   </head><body>
     <div class="section">
       <div class="container">
@@ -319,7 +319,7 @@
                       <label>
                         <input type="radio" value="3" name="wheather">burn more coal!1</label>
                     </div>
-                    <a class="btn btn-primary" id="link" href="http://makeweathergreatagain.com/?w1?city=Munich" target="_blank" name="link">Create your own weather!</a>
+                    <a class="btn btn-primary" id="link" href="https://makeweathergreatagain.com/?w1?city=Munich" target="_blank" name="link">Create your own weather!</a>
                     <div id="linktext" style="font-size:12px">debug link text</div>
                   </div>
                 </form>
