"Contribute" link to github

--- a/index.html
+++ b/index.html
@@ -336,6 +336,12 @@
                   <br>1600 Pennsylvania Ave NW
                   <br>Washington DC 20500, USA
                   <br>Phone: +1 202-456-111</p>
+		<p>
+		  <a href="https://github.com/gogannes/makeweathergreatagain">
+		    <img src="GitHub-Mark-32px.png" aria-hidden="true" alt="Github logo" width=32 height=32 />
+		    Support
+		  </a>
+		</p>
               </div>
             </div>
           </div>
