smaller github logo

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                   <br>Phone: +1 202-456-111</p>
 		<p>
 		  <a href="https://github.com/gogannes/makeweathergreatagain">
-		    <img src="GitHub-Mark-32px.png" aria-hidden="true" alt="Github logo" width=32 height=32 />
+		    <img src="GitHub-Mark-32px.png" aria-hidden="true" alt="Github logo" width="16" height="16" />
 		    Support
 		  </a>
 		</p>
