--- a/index.html
+++ b/index.html
@@ -341,6 +341,9 @@
                   <br>1600 Pennsylvania Ave NW
                   <br>Washington DC 20500, USA
                   <br>Phone: +1 202-456-111</p>
+		
+		   <p style="font-size:10"><br><br><br>Impressum: Schreiber, Gaisbergstraße 10, 81675 Munich, info[at]makeweathergreatagain.com</p>
+
 		<p>
 		  <a href="https://github.com/gogannes/makeweathergreatagain">
 		    <img src="GitHub-Mark-32px.png" aria-hidden="true" alt="Github logo" width="16" height="16" />
