update of ELEMENT 0 (shown in case of no parameters)

--- a/index.html
+++ b/index.html
@@ -107,10 +107,21 @@
                     <p id="date_0" style="font-size:14px">Today, Nov 13</p>
                     <p style="font-size:14px">
                       <span style="font-size:50px">32</span>°C
-                      <br>you can change the weather through "Make Weather Great Again"-Tab</p>
                   </div>
                 </div>
               </div>
+			  <div class="row">
+               <div class="col-xs-12">
+                    <p style="font-size:14px">
+                  <br>We make weather great again.
+                  <br>We believe it shouldn't be difficult to change the weather.
+                  <br>With our solution 
+			    <b>even you</b>&nbsp;can change the weather. It's just a few clicks.
+                <p>
+                  
+              </div>
+              </div>
+			  
             </div>
             <!-- ELEMENT 0 END -->
             <!-- ELEMENT 1 -->
