additional css style - padding jumbotron

--- a/index.html
+++ b/index.html
@@ -88,7 +88,14 @@
     </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
-  </head><body>
+ 
+	<style>
+	.jumbotron{
+	padding-top:15;
+	}
+	</style>
+	
+	</head><body>
     <div class="section">
       <div class="container">
         <div class="row">
