--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	</style>
 	
 	</head><body>
-    <div class="section">
+    <div class="section" style="padding-top:15px">
       <div class="container">
         <div class="row">
           <div class="col-md-7">
