adding support link for browserstack.com [ci skip]

--- a/index.html
+++ b/index.html
@@ -340,6 +340,10 @@
 		    <img src="GitHub-Mark-32px.png" aria-hidden="true" alt="Github logo" width="16" height="16" />
 		    Support
 		  </a>
+		  <a href="https://www.browserstack.com">
+		    <img src="browserstack-logo.png" aria-hidden="true" alt="Browserstack logo" width="16" height="16" />
+		    Supported by BrowserStack
+		  </a>
 		</p>
 		      
 		      <p style="font-size: 10px"><br><br><br>Impressum: Schreiber, Gaisbergstraße 10, 81675 Munich, info[at]makeweathergreatagain.com</p>
