--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                       </div>
                       <div class="radio">
                         <label>
-                          <input type="radio" value="6" name="weather">I don't give a shit - my office doesn't heven have a window!</label>
+                          <input type="radio" value="6" name="weather">I don't give a shit - my office doesn't even have a window!</label>
                       </div>
                       <div class="radio">
                         <label>
@@ -502,8 +502,7 @@
                   <br>With our solution
                   <b>even you</b>&nbsp;can change the weather with just a few clicks.
                   <br>
-                  <br>Yes we can! Make Weather Great Again!
-                  <br></p>
+                  <br>Yes we can! Make Weather Great Again!</p>
                 <p>
                   <b>Address:</b>,
                   <br>725 5th Ave, Trump Tower,
