Yes We Can! Make Weather Great Again!

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                   <br>With our solution
                   <b>even you</b>&nbsp;can change the weather with just a few clicks.
                   <br>
-                  <br>Yes we can! Make Weather Great Again!</p>
+                  <br>Yes We Can! Make Weather Great Again!</p>
                 <p>
                   <b>Address:</b>,
                   <br>725 5th Ave, Trump Tower,
