--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
               <div class="tab-pane" id="make">
                 <p>Pissed by bad weather?
                   <br>Want to go for BBQ, swimming or even skiing?
-                  <br>It is easy to change the weather. Try it!</p>
+                  <br>It is easy to change the weather. Select below and try it!</p>
                 <form class="form" id="Form" onsubmit="return false;">
                   <div class="form-group">
                     <p>Where:
