added website title

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             	padding-top: 15px;
             	}
     </style>
+    <title>MakeWeatherGreatAgain.com</title>
   </head><body>
     <div class="section" style="padding-top:15px">
       <div class="container">
