for christmas weather, Dez 24 as date

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 </div>
                 <div class="col-xs-5">
                   <div>
-                    <p id="date_4" class="date" style="font-size:14px">Today, Nov 13</p>
+                    <p id="date_4_renamedbecausenochangesrequired" class="date" style="font-size:14px">Today, Dez 24</p>
                     <p style="font-size:14px">
                       <span style="font-size:50px">1</span>°C
                       <br>heavy snowfall all Christmas Eve</p>
