title always shown

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
+            <div>
+              <p class="text-center">MakeWeatherGreatAgain.com</p>
+            </div>
             <!-- ELEMENT 0 -->
             <div class="jumbotron" id="p_0">
               <p id="weather_in_0" class="city" style="font-size:25px">Make Weather Great Again!</p>
