--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <!-- ELEMENT 0 -->
             <div class="jumbotron" id="p_0">
-              <p id="weather_in_0" class="city" style="font-size:25px">Make Weather Great Again!</p>
+              <!-- <p id="weather_in_0" class="city" style="font-size:25px">Make Weather Great Again!</p>-->
               <div class="row">
                 <div class="col-xs-7">
                   <div>
@@ -183,7 +183,7 @@
                     <p id="date_2" class="date" style="font-size:14px">Today, Nov 13</p>
                     <p style="font-size:14px">
                       <span style="font-size:50px">2</span>°C
-                      <br>continious heavy rain, feels like -2°C, chance of rain 99%, gusty wind
+                      <br>continuous heavy rain, feels like -2°C, chance of rain 99%, gusty wind
                       &nbsp;</p>
                   </div>
                 </div>
@@ -216,7 +216,7 @@
                 </div>
                 <div class="col-xs-3">
                   <div>
-                    <p style="font-size:14px">low pressure stays with no significant changes, floddings possible</p>
+                    <p style="font-size:14px">low pressure stays with no significant changes, huge floods possible</p>
                   </div>
                 </div>
               </div>
@@ -320,7 +320,7 @@
                 </div>
                 <div class="col-xs-3">
                   <div>
-                    <p style="font-size:14px">snowfall during nigts and clear sky after during day</p>
+                    <p style="font-size:14px">snowfall during nigts and clear sky during days</p>
                   </div>
                 </div>
               </div>
