title as link to main page

--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
         <div class="row">
           <div class="col-md-7">
             <div>
-              <p class="text-center">MakeWeatherGreatAgain.com</p>
-            </div>
+             <p class="text-center">
+               <a href="http://MakeWeatherGreatAgain.com" style="text-decoration: none; color:black">MakeWeatherGreatAgain.com</a>
+            </p>
+              </div>
             <!-- ELEMENT 0 -->
             <div class="jumbotron" id="p_0">
               <!-- <p id="weather_in_0" class="city" style="font-size:25px">Make Weather Great Again!</p>-->
