--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
             	}
     </style>
     <title>MakeWeatherGreatAgain.com</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/faviconpath/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/faviconpath/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/faviconpath/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/faviconpath/manifest.json">
+    <link rel="mask-icon" href="/faviconpath/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/faviconpath/favicon.ico">
+    <meta name="msapplication-config" content="/faviconpath/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
   </head><body>
     <div class="section" style="padding-top:15px">
       <div class="container">
