--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             	}
     </style>
     <title>MakeWeatherGreatAgain.com</title>
-    <!-- http://realfavicongenerator.net/ -->
+    <!-- http://realfavicongenerator.net/
+    -->
     <link rel="apple-touch-icon" sizes="180x180" href="/faviconpath/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/faviconpath/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/faviconpath/favicon-16x16.png" sizes="16x16">
@@ -440,6 +441,58 @@
               </div>
             </div>
             <!-- ELEMENT 6 END -->
+            <!-- ELEMENT 7: Chennai -->
+            <div class="jumbotron hidden " id="p_7">
+              <p id="weather_in_7" class="city" style="font-size:25px">Element 6</p>
+              <div class="row">
+                <div class="col-xs-7">
+                  <div>
+                    <img src="weather/30.png" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-xs-5">
+                  <div>
+                    <p id="date_7" class="date" style="font-size:14px">Today, Nov 13</p>
+                    <p style="font-size:14px">
+                      <span style="font-size:50px">36</span>°C
+                      <br>sun, no clouds, feels like 38°C, humidity 97%, light breeze</p>
+                  </div>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-xs-6">
+                  <p>Tomorrow</p>
+                </div>
+                <div class="col-xs-6">
+                  <p>Trend</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-3">
+                  <div>
+                    <img src="weather/01.png" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div>
+                    <p style="font-size:14px">34°C
+                      <br>sun, no clouds, you won't stop sweating!</p>
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div>
+                    <img src="weather/13.png" class="img-responsive">
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div>
+                    <p style="font-size:14px">Prepare, next Monsoon is coming for sure!</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- ELEMENT 7 END -->
           </div>
           <div class="col-md-5">
             <br>
@@ -493,49 +546,53 @@
                     <div id="more" class="hidden">
                       <div class="radio">
                         <label>
-                          <input type="radio" value="5" name="weather">Apocalypse!</label>
+                          <input type="radio" value="7" name="weather">Chennai</label>
                       </div>
-                      <div class="radio">
-                        <label>
-                          <input type="radio" value="6" name="weather">I don't give a shit - my office doesn't even have a window!</label>
-                      </div>
-                      <div class="radio">
-                        <label>
-                          <input type="radio" value="0" name="weather">I think this website is a hoax.</label>
-                      </div>
-                      <!--<div class="radio">
+                    </div>
+                    <div class="radio">
+                      <label>
+                        <input type="radio" value="5" name="weather">Apocalypse!</label>
+                    </div>
+                    <div class="radio">
+                      <label>
+                        <input type="radio" value="6" name="weather">I don't give a shit - my office doesn't even have a window!</label>
+                    </div>
+                    <div class="radio">
+                      <label>
+                        <input type="radio" value="0" name="weather">I think this website is a hoax.</label>
+                    </div>
+                    <!--<div class="radio">
                         <label>
                           <input type="radio" value="" name="weather">Can you please make a solar eclipse?</label>
                       </div>--></div>
-                    <a class="btn btn-primary" id="link" href="?w=1&amp;city=Munich" name="link">Create your own weather!</a>
-                  </div>
+                  <a class="btn btn-primary" id="link" href="?w=1&amp;city=Munich" name="link">Create your own weather!</a>
                 </form>
               </div>
-              <div class="tab-pane" id="about">
-                <p>We make weather great again.
-                  <br>We believe it shouldn't be difficult to change the weather.
-                  <br>With our solution
-                  <b>even you</b>&nbsp;can change the weather with just a few clicks.
-                  <br>
-                  <br>Yes We Can! Make Weather Great Again!</p>
-                <p>
-                  <b>Address:</b>,
-                  <br>725 5th Ave, Trump Tower,
-                  <br>New York, NY 10022, USA</p>
-                <p>
-                  <a href="https://github.com/gogannes/makeweathergreatagain">
+            </div>
+            <div class="tab-pane" id="about">
+              <p>We make weather great again.
+                <br>We believe it shouldn't be difficult to change the weather.
+                <br>With our solution
+                <b>even you</b>&nbsp;can change the weather with just a few clicks.
+                <br>
+                <br>Yes We Can! Make Weather Great Again!</p>
+              <p>
+                <b>Address:</b>,
+                <br>725 5th Ave, Trump Tower,
+                <br>New York, NY 10022, USA</p>
+              <p>
+                <a href="https://github.com/gogannes/makeweathergreatagain">
 
 		    <img src="GitHub-Mark-32px.png" aria-hidden="true" alt="Github logo" width="16" height="16">
 
 		    Support
 
 		  </a>
-                </p>
-                <p style="font-size: 10px">
-                  <br>
-                  <br>
-                  <br>Impressum: Schreiber, Gaisbergstraße 10, 81675 Munich, info[at]makeweathergreatagain.com</p>
-              </div>
+              </p>
+              <p style="font-size: 10px">
+                <br>
+                <br>
+                <br>Impressum: Schreiber, Gaisbergstraße 10, 81675 Munich, info[at]makeweathergreatagain.com</p>
             </div>
           </div>
         </div>
