--- a/index.html
+++ b/index.html
@@ -546,20 +546,20 @@
                     <div id="more" class="hidden">
                       <div class="radio">
                         <label>
-                          <input type="radio" value="7" name="weather">Chennai</label>
+                          <input type="radio" value="7" name="weather">Chennai like</label>
                       </div>
-                    </div>
-                    <div class="radio">
-                      <label>
-                        <input type="radio" value="5" name="weather">Apocalypse!</label>
-                    </div>
-                    <div class="radio">
-                      <label>
-                        <input type="radio" value="6" name="weather">I don't give a shit - my office doesn't even have a window!</label>
-                    </div>
-                    <div class="radio">
-                      <label>
-                        <input type="radio" value="0" name="weather">I think this website is a hoax.</label>
+                      <div class="radio">
+                        <label>
+                          <input type="radio" value="5" name="weather">Apocalypse!</label>
+                      </div>
+                      <div class="radio">
+                        <label>
+                          <input type="radio" value="6" name="weather">I don't give a shit - my office doesn't even have a window!</label>
+                      </div>
+                      <div class="radio">
+                        <label>
+                          <input type="radio" value="0" name="weather">I think this website is a hoax.</label>
+                      </div>
                     </div>
                     <!--<div class="radio">
                         <label>
